# ModernNotepadPlusPlus

./: Cargo.toml  README.md
.agents/workflows/: migrate_npp_to_rust.md
.github/workflows/: build-nullclaw.yml  ci.yml
.zed/: keymap.json  settings.json  tasks.json
GRACE_LSP_Dictionary/: GraceDictionaryExtractor.cs
Swarm_Daemon/: Cargo.toml
Swarm_Daemon/src/: main.rs
app/: Cargo.toml
app/src/: lib.rs  main.rs
app/src/core/: buffer.rs
app/src/highlight/: mod.rs  treesitter.rs
app/src/plugin/: api.rs  manager.rs
app/src/search/: mod.rs
app/wix/: main.wxs
nullclaw-ls/: Cargo.toml
nullclaw-ls/src/: analysis.rs  main.rs  protocol.rs
